This file lists all changes made to the game driver in all gory detail.
See the file HISTORY for a user-oriented summary of all the changes.

29-Jun-2004 (Lars Duening)  (3.3.567)
  - (comm.c) Improved the check for input_to() bitflags on an object with
       telnet disabled so that only changes in the mode are warned about.

21-Jun-2004 (Lars Duening)  (3.3.566)
  - (xalloc)  The memory reserves were allocated with xalloc(), but freed
       with mem_free() - not good (reported by Heiko).
  - (mstrings) Corrected a compiler error (thanks, Ralph!)

14-Jun-2004 (Lars Duening)  (3.3.565)
  - (doc/) Corrected a number of German manpages.
  - (comm.c) net_connect() didn't compile with IPv6 (reported by Fini).
  - (mstrings, object.c) Contradicting the documentation, save_object()
       did not strip a trailing '.c' from the given filename (reported by
       Niflheim@Unitopia) (Bug #00000067).

30-May-2004 (Lars Duening)  (3.3.564)
  - (interpret.c) Calling privilege_violation() with only three arguments
       accidentally instructed the interpreter to pass four (reported
       by Ralph).
  - (simulate.c) limited() accidentally removed all arguments for the
       closure to execute.

30-May-2004 (Lars Duening)  (3.3.563)
  - (smalloc.c) When using PThreads, don't request memory via sbrk() - on
       Linux systems this leads to corrupted memory.
  - (simulate) Added a new runtime limit LIMIT_COST (f-010320).
  - (interpret, simulate) For limited() and set_limits() the limit
       values are passed to the privilege_violation call (f-020131-0).

28-May-2004 (Lars Duening)  (3.3.562)
  - (interpret.c, port.h, util/indent/indent_globs.h) Adapted for gcc 3.4.0
      (thanks, Ralph!).
  - (mud/lp-245) Removed 'missing return value' warnings.

26-May-2004 (Lars Duening)  (3.3.561)
  - (prolang.y) The 'public shadows private' warning now checks only
       for genuinely private functions, not merely hidden ones. This should
       make the warning more accurate.
