@@ -11,12 +11,13 @@ BESCHREIBUNG
         Wird das Argument <i> angegeben, so verfolgt previous_object() den
         Aufruf <i> Stufen zurueck. Zum Beispiel liefert previous_object(2) das
         aufrufende Objekt des aufrufenden Objekts. Fuer <i> muss gelten:
-        0 <= i <= call_stack_depth()-1.
+        1 <= i < call_stack_depth(). Ein Wert <i> < 1 liefert das erste
+        aufrufende Object zurueck.
 
         Es gibt einen wichtigen Spezialfall: in Funktionen, die vom Gamedriver
         auf Grund eines externen Ereignises aufgerufen wurden (zum Beispiel
         Kommandi, die mit add_action() definiert wurden), liefert
-        previous_object() this_object(), previous_object(0) hingegen 0.
+        previous_object() this_object(), previous_object(1) hingegen 0.
 
 BEISPIEL
         int sicherheitscheck()
@@ -38,6 +39,9 @@ BEISPIEL
         Diese Funktion zeigt, wie man ueberpruefen kann, ob der letzte Aufruf
         einer Funktion im aktuellen Objekt sicher war, oder ob die
         Verarbeitung abgebrochen werden sollte.
+
+FEHLER
+        Werte von <i> < 1 werden wie <i> == 1 behandelt - dies ist historisch.
 
 SIEHE AUCH
         call_other(E), this_object(E), this_player(E), caller_stack(E),
